Implement correlation-based stress