@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "robustress"
-version = "0.220714.8"
+version = "0.220715.1"
 description = ""
 authors = ["davips <dpsabc@gmail.com>"]
 
